--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "log4js": "^6.3.0",
     "serve-index": "^1.9.1",
     "socket.io": "^4.1.3",
-    "socket.io-client": "^4.1.3"
+    "socket.io-client": "^4.1.3",
+    "uuid": "^8.3.2"
   }
 }
